// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ChildrenInput renders correctly 1`] = `
<Provider
  store={
    Object {
      "dispatch": [Function],
      "getState": [Function],
      "replaceReducer": [Function],
      "subscribe": [Function],
      Symbol(observable): [Function],
    }
  }
>
  <ChildrenInput
    onChange={[Function]}
    students={
      Array [
        Immutable.UserN {
          "id": "fdas90ß9sß0",
          "username": "hhansen",
          "children": Array [],
          "firstName": "Horst",
          "lastName": "Hansen",
          "displayname": "Horst Hansen",
          "email": "hort@hansen.de",
          "birthday": "2100-01-01",
          "role": "student",
          "isAdmin": false,
          "childrenIds": Array [],
          "class": undefined,
          "language": undefined,
          "managerNotes": undefined,
          "subscribedToWeeklySummary": undefined,
          "twoFAenabled": false,
        },
        Immutable.UserN {
          "id": "jkldsfjlk",
          "username": "hball",
          "children": Array [],
          "firstName": "Hanni",
          "lastName": "Ball",
          "displayname": "Hanni Ball",
          "email": "hanni@ball.de",
          "birthday": "2100-01-01",
          "role": "student",
          "isAdmin": false,
          "childrenIds": Array [],
          "class": undefined,
          "language": undefined,
          "managerNotes": undefined,
          "subscribedToWeeklySummary": undefined,
          "twoFAenabled": false,
        },
      ]
    }
  >
    id
    fdas90ß9sß0
    username
    hhansen
    children
    firstName
    Horst
    lastName
    Hansen
    displayname
    Horst Hansen
    email
    hort@hansen.de
    birthday
    2100-01-01
    role
    student
    isAdmin
    childrenIds
    class
    language
    managerNotes
    subscribedToWeeklySummary
    twoFAenabled
  </ChildrenInput>
</Provider>
`;

exports[`ChildrenInput renders when no additional users are available 1`] = `
<Provider
  store={
    Object {
      "dispatch": [Function],
      "getState": [Function],
      "replaceReducer": [Function],
      "subscribe": [Function],
      Symbol(observable): [Function],
    }
  }
>
  <ChildrenInput
    onChange={[Function]}
    students={
      Array [
        Immutable.UserN {
          "id": "fdas90ß9sß0",
          "username": "hhansen",
          "children": Array [],
          "firstName": "Horst",
          "lastName": "Hansen",
          "displayname": "Horst Hansen",
          "email": "hort@hansen.de",
          "birthday": "2100-01-01",
          "role": "student",
          "isAdmin": false,
          "childrenIds": Array [],
          "class": undefined,
          "language": undefined,
          "managerNotes": undefined,
          "subscribedToWeeklySummary": undefined,
          "twoFAenabled": false,
        },
      ]
    }
  >
    id
    fdas90ß9sß0
    username
    hhansen
    children
    firstName
    Horst
    lastName
    Hansen
    displayname
    Horst Hansen
    email
    hort@hansen.de
    birthday
    2100-01-01
    role
    student
    isAdmin
    childrenIds
    class
    language
    managerNotes
    subscribedToWeeklySummary
    twoFAenabled
  </ChildrenInput>
</Provider>
`;
